# toggl-tally

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml  test_publish.yml
requirements/: README.md
toggl_tally/: __init__.py  api.py  cli.py  filter.py  report.py  tally.py  time_utils.py
toggl_tally/tests/: conftest.py  test_filter.py  test_tally.py
