# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toggl-tally"
version = "0.1.2"
description = "A rich CLI to track hours worked towards monthly targets with toggl"
readme = "README.md"
authors = [{ name = "Tim Wolff-Piggott", email = "twolffpiggott@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["toggl", "cli", "track", "toggl-api", "command line"]
dependencies = [
    "click>=8.1.3",
    "holidays>=0.19",
    "pyyaml>=6.0",
    "requests>=2.28.2",
    "rich>=13.3.2",
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = ["pytest>=7.2.1"]
dev = [
    "pytest>=7.2.1",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "ipdb",
    "isort>=5.12.0",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/twolffpiggott/toggl-tally"

[project.scripts]
toggl-tally = "toggl_tally.cli:toggl_tally"

[tool.setuptools]
packages = ["toggl_tally"]

[tool.isort]
profile = "black"
multi_line_output = 3
